kustomization/flux/kustomization-crds/harbor-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor-system
  labels:
    istio-injection: enabled
