kustomization/flux/kustomization-crds/n8n-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    istio-injection: enabled
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: n8n
spec:
  mtls:
    mode: STRICT
