kustomization/flux/kustomization-crds/istio-gw.yaml
apiVersion: networking.istio.io/v1beta1 # apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.k8s.avgmax.team"
