kustomization/flux/kustomization-crds/n8n-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: n8n
  namespace: istio-ingress
spec:
  hosts:
    - n8n.k8s.avgmax.team
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: n8n.n8n.svc.cluster.local
            port:
              number: 5678
